<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Setting4APWidget</class>
 <widget class="QWidget" name="Setting4APWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1600</width>
    <height>713</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <layout class="QGridLayout" name="gridLayout" columnstretch="655,624,220">
     <item row="2" column="0">
      <widget class="CustomLabel" name="IpLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="CustomLabel" name="wifiSSIDnFTPIDlabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item row="4" column="0">
      <widget class="CustomLabel" name="printerLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
      <widget class="CustomLabel" name="subnetMaskLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="CustomLineEdit" name="macAddressLineEdit"/>
     </item>
     <item row="4" column="1">
      <widget class="CustomComboBox" name="printerComboBox"/>
     </item>
     <item row="3" column="1">
      <widget class="CustomLineEdit" name="subnetMaskLineEdit"/>
     </item>
     <item row="2" column="1">
      <widget class="CustomLineEdit" name="ipLineEdit"/>
     </item>
     <item row="1" column="1">
      <widget class="CustomLineEdit" name="wifiSSIDnFTPlineEdit"/>
     </item>
     <item row="0" column="0">
      <widget class="CustomLabel" name="macAddressLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
      <widget class="CustomPushButton" name="pwPushButton">
       <property name="text">
        <string>PushButton</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CustomPushButton</class>
   <extends>QPushButton</extends>
   <header>CustomPushButton.h</header>
  </customwidget>
  <customwidget>
   <class>CustomLabel</class>
   <extends>QLabel</extends>
   <header>CustomLabel.h</header>
  </customwidget>
  <customwidget>
   <class>CustomComboBox</class>
   <extends>QComboBox</extends>
   <header>CustomComboBox.h</header>
  </customwidget>
  <customwidget>
   <class>CustomLineEdit</class>
   <extends>QLineEdit</extends>
   <header>CustomLineEdit.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
